--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html, body{
     position: fixed;
     width: 100%;
     background-color: transparent;
+    backdrop-filter: none;
     top: 0;
     z-index: 1;
 }
@@ -19,7 +20,15 @@ html, body{
 .nav-link{
     padding-right: 50px;
     color: white;
+    font-weight: bold;
 }
+
+/* #nav-link-container{
+    backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 0.2);
+    float:right;
+    padding-left: 50px;
+} */
 
 @font-face{
     font-family: Kalinga;
