--- a/style.css
+++ b/style.css
@@ -62,9 +62,21 @@ h1{
 
 #title-div{
     width: 100%;
-    /* background-image: url(https://www.wellplated.com/wp-content/uploads/2024/04/how-to-make-easy-greek-salad.jpg); */
-    background-image: url(./assets/images/veggie-pizza.png);
-    background-size: cover;
+    margin-top: 0;
+    height: 100vh;
+    /* background-image: url(./assets/images/veggie-pizza.png);
+    background-size: cover; */
+    overflow: hidden;
+}
+
+#background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
 }
 
 #title{
@@ -76,6 +88,7 @@ h1{
 }
 
 #inner-title-div{
+    position: relative;
     width:100%;
     height:100%;
     backdrop-filter: brightness(50%);
