--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ html, body{
 
 #nav-bar{
     border-bottom: 1px transparent solid;
-    height: 50px;
-    padding-top: 25px;
+    height: 40px;
+    padding-top: 20px;
     text-align: right;
     position: fixed;
     width: 100%;
@@ -16,6 +16,7 @@ html, body{
     -webkit-backdrop-filter: none;
     top: 0;
     z-index: 1;
+    background-color: white;
 }
 
 .nav-link{
@@ -23,6 +24,18 @@ html, body{
     color: black;
     font-weight: bold;
     text-decoration: none;
+}
+
+#sub-nav-bar{
+    width: 100%;
+    background-color: #64b000;
+    text-align: center;
+    padding: 0.25%;
+    margin-top: 1%;
+}
+
+#rewards-text{
+    font-size: 1em;
 }
 
 /* #nav-link-container{
@@ -64,17 +77,22 @@ h1{
 
 #title-div{
     width: 100%;
-    padding-top: 10vh;
+    padding-top: 8vh;
     height: 100vh;
     /* background-image: url(./assets/images/veggie-pizza.png);
     background-size: cover; */
     overflow: hidden;
     text-align: center;
-    background-color: #fff;
+    /* background: linear-gradient(90deg, #357a35, rgb(57, 127, 57), rgba(57, 127, 57, 0.9), rgba(0, 255, 0, 0.3),  rgba(255, 255, 255, 0)); /* background: linear-gradient(90deg, #eeffd7, #ffffff, #eeffd7); */
 }
 
 #title{
     width: 50%;
+}
+
+#title-img{
+    width: 50%;
+    margin-top: 3%;
 }
 
 #subtitle{
@@ -83,6 +101,19 @@ h1{
 
 #order-button{
     width: 20%;
+    height: 50px;
+    background-color: rgb(86, 38, 38, 0.5);
+    border: 2px white solid;
+    border-radius: 10px;
+}
+
+#order-button-img{
+    width: 20%;
+}
+
+#order-button-text{
+    color: white;
+    font-weight: bold;
 }
 
 #table-img{
@@ -127,6 +158,6 @@ h1{
     position: relative;
     width:100%;
     height:100%;
-    backdrop-filter: brightness(50%);
-    -webkit-backdrop-filter: brightness(50%);
+    backdrop-filter: brightness(50%); 
+    padding-top: 10vh;
 }
