--- a/menu/style.css
+++ b/menu/style.css
@@ -1,97 +1,115 @@
-html, body{
+html, body {
     height: 100%;
-    margin: 0;
-    padding: 0;
+    overflow-y: auto;
+  }
+  
+
+#menu-category-div{
+    display: flex;
+    height: 40px;
+    border: 1px solid rgb(196, 196, 196);
+    text-align: left;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 30px;
+    padding-right: 30px;
+    overflow-x: auto;
+    white-space: nowrap;
+    scrollbar-width: none;
+    background-color: rgb(239, 255, 222);
 }
 
-#nav-bar{
-    border-bottom: 1px transparent solid;
-    height: 50px;
-    padding-top: 25px;
-    text-align: right;
-    position: fixed;
+.menu-category{
+    padding: 10px 30px 0px;
+    border-left: 1px solid rgb(196, 196, 196);
+    font-weight: bold;
+    font-size: 0.9em;
+    text-decoration: none;
+    min-width: 100px;
+    text-align: center;
+    color: black;
+}
+
+.menu-category:visited{
+    color: black;
+}
+
+#menu-category-div-foreground{
     width: 100%;
-    background-color: transparent;
-    backdrop-filter: none;
-    -webkit-backdrop-filter: none;
-    top: 0;
-    z-index: 1;
+    height: 100%;
+    background: linear-gradient(90deg, rgb(239, 255, 222), 5%, rgb(239, 255, 222, 0), 95%, rgb(239, 255, 222));
+    position: absolute;
+    top: 70px;
+    left: 0;
+    pointer-events: none;
+    display: flex;
+    align-items: center;
 }
 
-.nav-link{
-    padding-right: 50px;
-    color: rgb(0, 0, 0);
+.category-scroll-button{
+    position: absolute;
+    height: 40px;
+    width: 50px;
+    border: none;
     font-weight: bold;
 }
 
-/* #nav-link-container{
-    backdrop-filter: blur(5px);
-    background-color: rgba(255, 255, 255, 0.2);
-    float:right;
-    padding-left: 50px;
-} */
-
-@font-face{
-    font-family: Kalinga;
-    src: url(fonts/kalinga.ttf)
+#category-scroll-right{
+    background: linear-gradient(90deg, rgb(239, 255, 222, 0), 5%, rgb(239, 255, 222));
+    right: 0;
 }
 
-h1, h2, h3, h4, h5, h6, p, a{
-    /* font-family: Calibri, sans-serif; */
-    /* font-family: "Californian FB", AppleMyungjo; */
-    /* font-family: 'Times New Roman', Times, serif; */
-    font-family: Kalinga;
+#category-scroll-left{
+    background: linear-gradient(270deg, rgb(239, 255, 222, 0), 5%, rgb(239, 255, 222));
+    left: 0;
 }
 
-h1, h2, h3, h4, h5, h6{
+.menu-container{
+    display: block;
+    height: auto;
+    width: 100%;
+}
+
+.category-container{
+    width: 100%;
     text-align: center;
 }
 
-h1{
-    font-family: 'EB Garamond';
-    font-size: 108px;
-    font-weight: lighter;
-    padding: 0;
+.menu-item{
+    display: inline-block;
+    width: 300px;
+    height: 350px;
+    border: 1px solid black;
+    text-align: left;
+    overflow-x: hidden;
+    border-radius: 20px;
+    background-color: rgb(239, 255, 222);
+}
+
+.menu-item-title{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5em;
+    text-align: left;
+    padding: 20px 20px 0px;
     margin: 0;
 }
 
-#desc{
-    padding-bottom: 100px;
-    padding-left: 200px;
-    padding-right: 200px;
+.menu-item-desc{
+    padding: 0px 20px 0px;
+    margin-top: 3px;
+    margin-bottom: 0;
 }
 
-#title-div{
-    width: 100%;
-    margin-top: 0;
-    height: 100vh;
-    /* background-image: url(./assets/images/veggie-pizza.png);
-    background-size: cover; */
-    overflow: hidden;
+.menu-item-img{
+    height: 60%;
 }
 
-#background-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-}
-
-#title{
-    color: rgb(0, 0, 0);
-    font-size: 10vw;
-    vertical-align: middle;
-    /* padding-top: 20vh; */
-    padding-top: 35vh;
-}
-
-#inner-title-div{
-    position: relative;
-    width:100%;
-    height:100%;
-    backdrop-filter: brightness(50%);
-    -webkit-backdrop-filter: brightness(50%);
+.menu-item-add{
+    margin: 0px 20px 0px 220px;
+    height: 50px;
+    width: 70px;
+    border-radius: 20px;
+    font-size: 0.9em;
+    font-weight: bold;
+    background-color: #aad374;
 }
