--- a/menu/style.css
+++ b/menu/style.css
@@ -84,6 +84,7 @@ html, body {
     overflow-x: hidden;
     border-radius: 20px;
     background-color: rgb(239, 255, 222);
+    margin: 10px;
 }
 
 .menu-item-title{
