--- a/menu/item/style.css
+++ b/menu/item/style.css
@@ -1,5 +1,13 @@
 
+#logo{
+    float: left;
+}
 
+#logo-img{
+    height: 100%;
+    border: 0;
+    margin-top: 3%;
+}
 
 #left-item-div{
     display: inline-block;
