--- a/menu/style.css
+++ b/menu/style.css
@@ -1,8 +1,13 @@
 html, body {
     height: 100%;
     overflow-y: auto;
-  }
-  
+}
+
+#logo-img{
+    height: 100%;
+    border: 0;
+    margin-top: 3%;
+}
 
 #menu-category-div{
     display: flex;
@@ -17,7 +22,7 @@ html, body {
     white-space: nowrap;
     scrollbar-width: none;
     background-color: rgb(239, 255, 222);
-    margin-top: 20px;
+    margin-top: 78px;
 }
 
 .menu-category{
