--- a/style.css
+++ b/style.css
@@ -18,9 +18,7 @@ html, body{
 
 #nav-bar{
     border-bottom: 8px green solid;
-    height: 40px;
-    padding-top: 20px;
-    text-align: right;
+    height: 70px;
     position: absolute;
     width: 100%;
     background-color: transparent;
@@ -29,6 +27,25 @@ html, body{
     top: 0;
     z-index: 1;
     background-color: white;
+}
+
+#logo{
+    float: left;
+    height: 95%;
+    margin: 0 2% 0;
+}
+
+#logo-img{
+    height: 200%;
+    border-radius: 50%;
+    background-color: white;
+    border-bottom: 8px green solid;;
+}
+
+#nav-link-container{
+
+    padding-top: 25px;
+    float: right;
 }
 
 .nav-link{
@@ -49,13 +66,6 @@ html, body{
 #rewards-text{
     font-size: 1em;
 }
-
-/* #nav-link-container{
-    backdrop-filter: blur(5px);
-    background-color: rgba(255, 255, 255, 0.2);
-    float:right;
-    padding-left: 50px;
-} */
 
 @font-face{
     font-family: Kalinga;
