--- a/about/style.css
+++ b/about/style.css
@@ -1,52 +1,136 @@
 
-.image-container{
-    width: 40%;
-    height: 100%;
+html, body{
+    background: radial-gradient(rgb(225, 255, 225), white) no-repeat;
+    background-position: center;
+  background-attachment: fixed;
 }
 
-.text-container{
-    width: 40%;
-    height: 100%;
-    vertical-align: middle;
-    padding: 5%;
-    float: right
+#about-title{
+    color: #000;
+    text-align: center;
+    margin-top: 100px;
+    font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: bolder;
+    text-shadow: 3px 3px 0 #0d8631;
+}
+
+p{
+    color: #000;
+    font-size: 1.2em;
 }
 
 .left-container{
     float: left;
+    width: 20%;
+    padding: 5%;
+    padding-left: 10%;
 }
 
-.section{
-    position: fixed;
+.right-container{
+    float: right;
+    width: 30%;
+    padding: 5%;
+    padding-right: 10%;
 }
 
-.subsection{
-    opacity: 0;
-}
-
-.img-half-center{
-    height: 90%;
-    width: 90%;
-    margin: 200px 25% 25% 25%;
+.side-image{
+    height: 500px;
 }
 
 .circle{
     border-radius: 50%;
+    outline: 1vw solid rgb(238, 255, 238);
+    outline-offset: -0.8vw;
 }
 
-.about-text{
-    margin-top: 40%;
+#main-text-div{
+    margin-left: 50%;
+    width: 40%;
 }
 
-.white-text{
-    color: white;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-}
-
-#scroll-overlay{
-    position: absolute;
-    height: 500%;
+#farm-slideshow{
     width: 100%;
-    overflow-y: scroll;
-    z-index: -1;
+    border-radius: 12px;
 }
+
+.farm-container{
+    margin-top: 10%;
+    padding: 10%;
+    text-align: center;
+}
+
+.half-text{
+    width: 30%;
+    height: 100%;
+    padding: 5%;
+    margin: 4.9%;
+    margin-top: 10%;
+    outline: 1px solid green;
+    background-color: rgb(225, 255, 225);
+    text-align: center;
+    font-size: 1em;
+}
+
+
+.left-text{
+    display: inline-block;
+    margin-right: 0;
+    padding-right: 0;
+    padding-left: 5%;
+    margin-left: 7.5%;
+    padding-right: 5%;
+    vertical-align: top;
+}
+
+.right-text{
+    display: inline-block;
+    margin-right: 2.5%
+}
+
+#earth-image{
+    position: absolute;
+    left: -20vw;
+    height: 110vh;
+    width: auto;
+}
+
+@media only screen and (max-width: 1400px) {
+    #earth-image{
+        height: 80vh;
+        left: -10vw
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    #earth-image{
+        left: -20vw;
+    }
+}
+
+@media only screen and (max-width: 1050px) {
+    #earth-image{
+        position: relative;
+        width: 20%;
+        margin-left: 39%;
+        margin-top: 2%;
+        height: auto;
+        left: auto;
+        outline: none;
+    }
+
+    #main-container{
+        width: 100%;
+        text-align: center;
+    }
+
+    #about-title{
+        margin-top: 25%;
+        font-size: 7em;
+    }
+
+    #main-text-div{
+        margin-left: 15%;
+        width: 70%;
+    }
+}
+
