Added menu favorites and about us link to home page

--- a/menu/item/style.css
+++ b/menu/item/style.css
@@ -92,6 +92,12 @@ input[type=number] {
     background-color: #a0c96f;
 }
 
+@media only screen and (max-width: 500px) {
+    #add-to-cart {
+        width: 50%;
+    }
+}
+
 #order-bar{
     width: 97%;
     position: fixed;
