slightly worked on references

--- a/menu/style.css
+++ b/menu/style.css
@@ -89,7 +89,7 @@ html, body {
     text-align: left;
     overflow-x: hidden;
     border-radius: 20px;
-    background-color: rgb(239, 255, 222);
+    background-color: #efffde;
     margin: 10px;
     position: relative;
 }
