--- a/style.css
+++ b/style.css
@@ -327,7 +327,60 @@ h1{
     background-color: #69bf5c;
     border-radius: 12px;
 }
+footer{
+background-color: #049e53;
+}
+.footerContainer{
+    width: 100%;
+    padding: 70px 30px 20px;
+}
+.footerNav{
+    margin:30px 0;
+}
+.footerNav ul{
+    display: flex;
+    justify-content: center;
+}
+.footerNav ul li{
+    color: white;
+    font-size: 1.3em;
+    text-decoration: none;
+    margin: 20px;
+    opacity: 0.7;
+    transition: 0.5s;
+    list-style-type: nonedisc;
+}
+.footerNav ul li a:hover{
+    opacity: 1;
+}
+.footerBottom{
+    background-color:#004323;
+    padding: 20px;
+    text-align: center;
+}
+.footerBottom p{
+    color: white;
+    font-size: 1.3em;
+}
+.designer{
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 400;
+    font-size: 1.3em;
+    margin: 0px 5px;
+    opacity: 0.7;
+}
+@media (max-width: 700px){
+    .footerNav ul{
+        flex-direction: column;
+    }
+    .footerNav ul li{
+        width: 100%;
+        text-align: center;
+        margin: 10px;
+    }
 
+}
 /*.footer{
     display: flex;
     flex-direction: column;
