--- a/references/style.css
+++ b/references/style.css
@@ -11,3 +11,14 @@
     width: 100%;
     text-align: center;
 }
+
+#pdf-link-div{
+    width: 100%;
+    text-align: center;
+}
+
+.pdf-link{
+    margin: 2%;
+    font-size: 1.25em;
+    color: rgb(0, 119, 0);
+}
