--- a/style.css
+++ b/style.css
@@ -324,6 +324,7 @@ h1{
     height: 60px;
     margin-top: 30px;
     font-size: 25px;
+    font-weight: bold;
     font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size: bolder;
     background-color: #69bf5c;
@@ -335,10 +336,10 @@ background-color: #049e53;
 }
 .footerContainer{
     width: 100%;
-    padding: 70px 30px 20px;
 }
-.footerNav{
-    margin:30px 0;
+.footerNav {
+    margin: 30px 0;
+    padding: 30px 0 0;
 }
 .footerNav ul{
     display: flex;
@@ -349,16 +350,25 @@ background-color: #049e53;
     font-size: 1.3em;
     text-decoration: none;
     margin: 20px;
-    opacity: 0.7;
+    opacity: 1;
     transition: 0.5s;
-    list-style-type: nonedisc;
+    list-style-type: none;
+}
+.footerNav ul li a{
+    font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+}
+.footerNav ul li a:visited{
+    color: white;
 }
 .footerNav ul li a:hover{
     opacity: 1;
 }
-.footerBottom{
-    background-color:#004323;
-    padding: 20px;
+.footerBottom {
+    background-color: #004323;
+    padding: 1px;
     text-align: center;
 }
 .footerBottom p{
