--- a/about/style.css
+++ b/about/style.css
@@ -1,9 +1,9 @@
 
 html, body{
     /*background: radial-gradient(rgb(225, 255, 225), white) no-repeat; */
-    background: background-color(white);
-    background-position: center;
-  background-attachment: fixed;
+    /* background-color: white; */
+    /* background-position: center;
+    background-attachment: fixed; */
 }
 
 #about-title{
@@ -57,6 +57,10 @@ p{
     width: 40%;
 }
 
+#main-text{
+    text-shadow: 1px 1px white, 1px -1px white, -1px 1px white, -1px -1px white;
+}
+
 #farm-slideshow{
     width: 100%;
     border-radius: 12px;
@@ -66,6 +70,8 @@ p{
     margin-top: 10%;
     padding: 10%;
     text-align: center;
+    position: relative;
+    z-index: 10;
 }
 
 .half-text{
@@ -101,6 +107,7 @@ p{
     left: -20vw;
     height: 110vh;
     width: auto;
+    z-index: -1;
 }
 
 @media only screen and (max-width: 1400px) {
